# swe-4-ds-class

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  util.txt
.github/workflows/: main.yml
data/raw/: credit_sample.csv.dvc
scripts/: test_volume.py
src/: data_loader.py
tests/: conftest.py
tests/unit/: test_data_loader.py  test_example.py
