[project]
name = "swe-4-ds-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "scikit-learn>=1.8.0",
]

[tool.pytest.ini_options]
# Diretório de testes
testpaths = ["tests"]

# Padrões de descoberta
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

# Opções de execução
addopts = [
    "-v",                    # Verbose
    "--tb=short",            # Traceback curto
    "--strict-markers",      # Markers devem ser registrados
]

# Markers customizados
markers = [
    "slow: marca testes lentos",
    "integration: marca testes de integração",
    "e2e: marca testes end-to-end",
]

[tool.coverage.run]
# Configuração de cobertura
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
# Relatório de cobertura
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
